# busybae

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  main.go  main_test.go
internal/bazelrc/: BUILD.bazel  discover.go  discover_test.go  parser.go  parser_test.go  paths.go  paths_test.go  resolve.go  resolve_test.go
internal/daemon/: BUILD.bazel  daemon.go  daemon_test.go  spawn.go  stale_test.go
internal/gc/: BUILD.bazel  contents.go  contents_test.go  disk.go  disk_test.go  download.go  download_test.go  gc.go  gc_test.go  helpers_test.go  lock_other.go  lock_unix.go  nlink_other.go  nlink_unix.go  output.go  output_test.go
internal/version/: BUILD.bazel  version.go
internal/wrapper/: BUILD.bazel  bazel.tmpl  wrapper.go  wrapper_test.go
