load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

# gazelle:prefix busybae

gazelle(name = "gazelle")

go_library(
    name = "busybae_lib",
    srcs = ["main.go"],
    importpath = "busybae",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/bazelrc",
        "//internal/daemon",
        "//internal/gc",
        "//internal/version",
        "//internal/wrapper",
    ],
)

go_binary(
    name = "busybae",
    embed = [":busybae_lib"],
    visibility = ["//visibility:public"],
    # x_defs stamps release metadata into internal/version at link time.
    # Values referencing STABLE_* keys come from tools/build/status.sh via
    # --workspace_status_command (see .bazelrc). --stamp is on by default
    # so `bazel build //:busybae` always produces a versioned binary.
    x_defs = {
        "busybae/internal/version.Version": "{STABLE_BUSYBAE_VERSION}",
        "busybae/internal/version.Commit": "{STABLE_BUSYBAE_COMMIT}",
    },
)

go_test(
    name = "busybae_test",
    srcs = ["main_test.go"],
    embed = [":busybae_lib"],
    deps = ["//internal/gc"],
)
