load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wrapper",
    srcs = ["wrapper.go"],
    embedsrcs = ["bazel.tmpl"],
    importpath = "busybae/internal/wrapper",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "wrapper_test",
    srcs = ["wrapper_test.go"],
    embed = [":wrapper"],
)
